# aiomailtm

./: .gitignore  LICENSE  README.md  pyproject.toml
aiomailtm/: __init__.py  __version__.py  aiomailtm.py  recli.py  structures.py
aiomailtm/wordlists/: adjectives.txt  nouns.txt
